--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -6,17 +6,27 @@
     box-sizing: border-box;
 }
 
+/* Main container */
 .main {
     font-family: 'Roboto', 'sans-serif';
-    position: relative;
 }
 
+/* Menu */
 .menu {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
     background-color: rgb(34, 230, 181);
     display: flex;
     justify-content: flex-start;
     align-items: center;
+}
+
+ion-icon {
+    font-size: 3.5em;
+    color: white;
+}
+
+ion-icon:hover {
+    color: rgb(206, 206, 206);
 }
 
 .menu span {
@@ -28,6 +38,7 @@
     color: rgb(206, 206, 206);
 }
 
+/* Side nav */
 .side_nav {
     font-family: 'Roboto', 'sans-serif';
     display: none;
@@ -60,6 +71,7 @@
     color: rgb(221, 221, 221);
 }
 
+/* container */
 .container {
     font-family: 'Roboto', 'sans-serif';
     position: relative;
@@ -67,7 +79,10 @@
     grid-template-columns: repeat(12/1fr);
 }
 
+/* Main section 1 */
 .main_section1 {
+    width: 95vw;
+    height: 40vh;
     position: relative;
     margin: auto;
     background-color: rgb(228, 228, 228);
@@ -75,70 +90,68 @@
 }
 
 .main_section1 img {
-    width: 95vw;
-    height: 80vh;
+    width: 20%;
+    height: auto;
+    margin: 10% 0 0 40%;
+    border-radius: 50%;
 }
 
 .main_section1 h1 {
     width: 100%;
-    height: auto;
+    height: 30%;
     text-align: center;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
     position: absolute;
-    font-size: 10em;
+    font-size: 6em;
     font-weight: 300;
-    color: white;
+    color: rgba(34, 230, 181, 1);
 }
 
-.section2 {
+/* Main section 2 */
+.main_section2 {
     width: 95vw;
     height: 80vh;
-    margin: 30px 0;
     grid-column: 1 / 11;
-    display: grid;
-    grid-template: repeat(2, 1fr)/ repeat(2, 1fr);
+    font-family: 'Roboto', 'sans-serif';
 }
 
-.main_section2 h2 {
-    font-size: 3em;
-    font-weight: 200;
-    text-align: center;
-    color: rgb(34, 230, 181);
-    background-color: white;
-    z-index: 1;
+table {
+    width: 20%;
+    height: 100%;
+    font-size: 1.5em;
+    margin: 15% 0 5% 40%;
 }
 
-.section2 .article {
-    height: 90%;
-    width: 70%;
-    background-color: white;
-    margin: auto;
+input {
+    width: 100%;
+    height: 100%;
+    border: 2px solid rgba(34, 230, 181, 0.397);
     border-radius: 10px;
+    font-size: 1em;
+    padding: 2%;
+    margin: 2%;
 }
 
-.article h3 {
-    font-family: 'Roboto', 'sans-serif';
-    font-size: 2em;
-    font-weight: 100;
-    text-align: center;
-    color: white;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    background-color: rgb(34, 230, 181);
+textarea {
+    width: 100%;
+    border: 2px solid rgba(34, 230, 181, 0.397);
+    border-radius: 10px;
+    font-size: 1em;
+    padding: 2%;
+    margin: 2%;
 }
 
-.article p {
-    font-family: 'Roboto', 'sans-serif';
-    height: 90%;
-    font-size: 1.2em;
-    text-align: left;
-    color: black;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    background-color: rgb(245, 245, 245);
-    padding: 1% 3% 0 3%;
+.btn {
+    background-color: rgb(209, 209, 209);
+    color: rgba(34, 230, 181);
 }
 
+.btn:hover {
+    background-color: rgba(34, 230, 181);
+    color: rgb(247, 247, 247);
+    border: 2px solid black;
+}
+
+/* Main section 3 */
 .main_section3 {
     width: 99vw;
     height: 30vh;
@@ -165,13 +178,10 @@
 
 .logo a {
     text-decoration: none;
-}
-
-ion-icon {
     color: white;
-    font-size: 3em;
+    font-weight: 100;
 }
 
-ion-icon:hover {
+.logo a:hover {
     color: rgb(206, 206, 206);
 }
