--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,12 @@
 .main {
     font-family: 'Roboto', 'sans-serif';
     position: relative;
+    background-color: rgb(211, 211, 211);
 }
 
 .menu {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
-    background-color: rgb(34, 230, 181);
+    background-color: rgba(34, 230, 181, 0.397);
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -32,10 +33,10 @@
     font-family: 'Roboto', 'sans-serif';
     display: none;
     position: fixed;
-    width: 30vw;
+    width: 20vw;
     height: 100vh;
     z-index: 1;
-    background-color: rgba(34, 230, 181, 0.6);
+    background-color: rgba(34, 230, 181);
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
 }
 
@@ -51,7 +52,7 @@
 .side_nav a {
     text-decoration: none;
     padding: 0 15%;
-    font-size: 3em;
+    font-size: 170%;
     text-align: right;
     color: white;
 }
@@ -70,7 +71,6 @@
 .main_section1 {
     position: relative;
     margin: auto;
-    background-color: rgb(228, 228, 228);
     grid-column: 1 / 11;
 }
 
@@ -84,6 +84,7 @@
     height: auto;
     text-align: center;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
+    background-color: rgba(34, 230, 181, 0.397);
     position: absolute;
     font-size: 10em;
     font-weight: 300;
@@ -104,8 +105,7 @@
     font-weight: 200;
     text-align: center;
     color: rgb(34, 230, 181);
-    background-color: white;
-    z-index: 1;
+    background-color: rgb(211, 211, 211);
 }
 
 .section2 .article {
@@ -174,4 +174,122 @@ ion-icon {
 
 ion-icon:hover {
     color: rgb(206, 206, 206);
+}
+
+/* Media query */
+@media only screen and (max-width: 1650px) { 
+    .main_section2 {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .section2 {
+        height: 80vh;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .side_nav a {
+        font-size: 1em;
+    }
+    .section2 .article {
+        height: 80%;
+        width: 95%;
+        margin: 1% 0;
+    }
+    
+    .article h3 {
+        width: 100%;
+        font-size: 1.5em;
+    }
+    
+    .article p {
+        font-size: 1.1em;
+
+    }
+}
+
+@media only screen and (max-width: 1345px) { 
+    .main_section1 h1 {
+        font-size: 3em;
+    }
+
+    .main_section1 img {
+        height: 60vh;
+    }
+
+    .main_section3 {
+        height: 20vh;
+    }
+    
+    .main_section3 h2 {
+        font-size: 2.5em;
+    }
+    
+    .main_section3 ion-icon {
+        font-size: 2em;
+    }
+}
+
+@media only screen and (max-width: 960px) { 
+    .menu span {
+        font-size: 0.7em;
+    }
+    
+    ion-icon {
+        font-size: 2em;
+        color: white;
+    }
+
+    .main_section1 {
+        height: 20vh;
+        margin-right: 8%;
+    }
+
+    .main_section1 h1 {
+        font-size: 2em;
+    }
+
+    .section2 {
+        height: 50vh;
+    }
+
+    .main_section1 img {
+        width: 90vw;
+        height: 20vh;
+    }
+
+    .main_section2 h2 {
+        font-size: 1em;
+    }
+
+    .side_nav a {
+        font-size: 0.6em;
+    }
+
+    .article h3 {
+        width: 100%;
+        font-size: 1.1em;
+    }
+    
+    .article p {
+        font-size: 0.4em;
+
+    }
+
+    .main_section3 {
+        height: 10vh;
+    }
+    
+    .main_section3 h2 {
+        font-size: 1.5em;
+    }
+    
+    .main_section3 ion-icon {
+        font-size: 1em;
+    }
 }
