--- a/css/style_register.css
+++ b/css/style_register.css
@@ -21,6 +21,15 @@
     align-items: center;
 }
 
+.menu span {
+    color: white;
+    font-size: 1em;
+}
+
+.menu span:hover {
+    color: rgb(206, 206, 206);
+}
+
 ion-icon {
     font-size: 3.5em;
     color: white;
@@ -30,14 +39,6 @@ ion-icon:hover {
     color: rgb(206, 206, 206);
 }
 
-.menu span {
-    color: white;
-    font-size: 1em;
-}
-
-.menu span:hover {
-    color: rgb(206, 206, 206);
-}
 
 /* Side nav */
 .side_nav {
@@ -63,7 +64,7 @@ ion-icon:hover {
 .side_nav a {
     text-decoration: none;
     padding: 0 15%;
-    font-size: 170%;
+    font-size: 2em;
     text-align: right;
     color: white;
 }
@@ -83,7 +84,7 @@ ion-icon:hover {
 /* Main section 1 */
 .main_section1 {
     width: 95vw;
-    height: 40vh;
+    height: 20vh;
     position: relative;
     margin: auto;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7));
@@ -91,16 +92,9 @@ ion-icon:hover {
     grid-column: 1 / 11;
 }
 
-.main_section1 img {
-    width: 15%;
-    height: auto;
-    margin: 9% 0 0 40%;
-    border-radius: 50%;
-}
-
 .main_section1 h1 {
     width: 100%;
-    height: 30%;
+    height: 10%;
     text-align: center;
     position: absolute;
     font-size: 6em;
@@ -110,16 +104,29 @@ ion-icon:hover {
 
 /* Main section 2 */
 .main_section2 {
+    position: relative;
     width: 95vw;
     height: 70vh;
     font-family: 'Roboto', 'sans-serif';
+}
+
+.main_section2 img {
+    position: absolute;
+    width: 50%;
+    height: auto;
 }
 
 table {
     width: 40%;
     height: 100%;
     font-size: 1.5em;
-    margin: 10% 0 5% 30%;
+    margin: 5% 0 5% 45%;
+ 
+}
+
+td {
+    color: white;
+    text-align: right;
 }
 
 input {
@@ -132,20 +139,11 @@ input {
     margin: 2%;
 }
 
-textarea {
-    width: 100%;
-    border: 2px solid rgba(34, 230, 181, 0.397);
-    border-radius: 10px;
-    font-size: 1em;
-    padding: 2%;
-    margin: 2%;
-}
-
 .btn {
-    background-color: rgba(34, 230, 181);
+    background-color: rgb(34, 230, 181);
     color: rgb(247, 247, 247);
     border: 2px solid rgb(68, 68, 68);
-    font-size: 1em;
+    font-size: 1.3em;
 }
 
 .btn:hover {
@@ -157,36 +155,28 @@ textarea {
 /* Main section 3 */
 .main_section3 {
     width: 99vw;
-    height: 30vh;
+    height: 10vh;
     margin: auto;
     grid-column: 1 / 11;
     background-color: rgb(34, 230, 181);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.main_section3 h2 {
+.main_section3 span {
     margin: 1%;
-    font-size: 3em;
+    font-size: 1.5em;
     font-weight: 200;
     text-align: center;
     color: white;
 
 }
 
-.logo {
-    margin-top: 2%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
-.logo a {
-    text-decoration: none;
-    color: white;
-    font-weight: 100;
-}
-
-.logo a:hover {
-    color: rgb(206, 206, 206);
+.main_section3 img {
+    width: 4%;
+    height: auto;
+    border-radius: 50%;
 }
 
 /* media query */
@@ -199,12 +189,8 @@ textarea {
         font-size: 1em;
     }
 
-    .main_section1 img {
-        display: none;
-    }
-
     table {
-        margin: 5% 0 5% 25%;
+        margin: 5% 0 5% 50%;
     }
 }
 
@@ -220,7 +206,7 @@ textarea {
     table {
         width: 50%;
         font-size: 1.2em;
-        margin: 5% 0 5% 20%;
+        margin: 5% 0 5% 40%;
     }
 
     .main_section3 {
@@ -229,10 +215,6 @@ textarea {
     
     .main_section3 h2 {
         font-size: 2.5em;
-    }
-    
-    .main_section3 ion-icon {
-        font-size: 2em;
     }
 }
 
@@ -246,41 +228,46 @@ textarea {
         color: white;
     }
 
+    .main_section1 h1 {
+        font-size: 1px;
+    }
+
     .main_section1 {
-        height: 20vh;
+        height: 15vh;
     }
 
     .main_section2 {
-        height: 60vh;
+        height: 70vh;
+    }
+
+    .main_section2 img {
+        display: none;
     }
 
     table {
         width: 70%;
         font-size: 1em;
-        margin: 2% 0 5% 10%;
+        margin: 10% 0 5% 15%;
+    }
+
+    .label {
+        display: none;
     }
 
     .main_section1 h1 {
-        font-size: 3em;
+        font-size: 2em;
     }
 
     .side_nav a {
         font-size: 0.4em;
     }
 
-    .main_section3 {
-        height: 20vh;
-    }
-    
-    .main_section3 h2 {
-        font-size: 2em;
-    }
-    
-    .main_section3 a {
-        font-size: 0.6em;
+    .main_section3 img {
+        width: 15%;
     }
 
-    .main_section3 ion-icon {
+    .main_section3 span {
         font-size: 1em;
     }
+    
 }
