--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -237,6 +237,10 @@ textarea {
 }
 
 @media only screen and (max-width: 960px) { 
+    .side_nav {
+        width: 30vw;
+    }
+    
     .menu span {
         font-size: 0.7em;
     }
