--- a/css/style_register.css
+++ b/css/style_register.css
@@ -195,6 +195,10 @@ input {
 }
 
 @media only screen and (max-width: 1345px) { 
+    .side_nav {
+        width: 30vw;
+    }
+    
     .main_section1 {
         height: 20vh;
     }
